[package]
name = "bob-draw-typ"
version = "0.1.0"
edition = "2021"

# see:
# - https://github.com/astrale-sharp/wasm-minimal-protocol
# - https://codeberg.org/Sekoia/gviz-typst/src/commit/a5d090c27d4de0ad87a7d9567d378665c3f5ec07/Cargo.toml

[lib]
crate-type = ["cdylib"]

[dependencies]
svgbob = "0.7.2"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic